--- a/carewellapp/pubspec.yaml
+++ b/carewellapp/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   webview_flutter: any
+  googleapis: ^7.0.0
 
 
 dev_dependencies:
