--- a/carewellapp/pubspec.yaml
+++ b/carewellapp/pubspec.yaml
@@ -19,6 +19,7 @@ version: 1.0.0+1
 #2.12.0
 environment:
   sdk: ">=2.12.0 <3.0.0"
+  
 
 dependencies:
   flutter:
@@ -30,8 +31,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   webview_flutter: any
   gsheets: any
-
-
+  platform_device_id: ^1.0.1
+  fl_chart: ^0.41.0
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
