--- a/carewellapp/pubspec.yaml
+++ b/carewellapp/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   gsheets: any
   platform_device_id: ^1.0.1
   fl_chart: ^0.41.0
+  shared_preferences: ^2.0.13
   
 dev_dependencies:
   flutter_test:
