--- a/carewellapp/pubspec.yaml
+++ b/carewellapp/pubspec.yaml
@@ -37,10 +37,15 @@ dependencies:
   firebase_auth: ^3.3.6
   cloud_firestore: ^3.1.7
   provider: ^6.0.2
+  firebase_core: ^1.12.0
+  flutter_chat_ui: ^1.5.5
+  flutter_firebase_chat_core: ^1.5.2
   
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+    
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
