--- a/carewellapp/android/build.gradle
+++ b/carewellapp/android/build.gradle
@@ -2,13 +2,17 @@ buildscript {
     ext.kotlin_version = '1.3.50'
     repositories {
         google()
-        jcenter()
+       // jcenter()
+         mavenCentral()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.0'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.google.gms:google-services:4.3.10'
+        // classpath 'com.android.tools.build:gradle:4.1.0'
+        // classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        // classpath 'com.google.gms:google-services:4.3.10'
+
+         classpath 'com.android.tools.build:gradle:4.1.0'
+         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
@@ -16,8 +20,8 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
-       // mavenCentral()
+       // jcenter()
+        mavenCentral()
     }
 }
 
