--- a/carewellapp/pubspec.yaml
+++ b/carewellapp/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_core: ^1.12.0
   flutter_chat_ui: ^1.5.5
   flutter_firebase_chat_core: ^1.5.2
+  http: ^0.13.3
   
 dev_dependencies:
   flutter_test:
